--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">E-Site</a>
+    <a class="navbar-brand" routerLink="/">E-Site</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,13 +12,19 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
             </li>
-            <li ngbDropdown class="nav-item dropdown ">
-                <a ngbDropdownToggle class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</a>
+            <ng-template #noUser>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/login">Login</a>
+                </li>
+            </ng-template>
+
+            <li ngbDropdown class="nav-item dropdown " *ngIf="authService.user$ | async as user; else noUser">
+                <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.displayName}}</a>
                 <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
                     <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
                     <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-                    <a class="dropdown-item">Logout</a>
+                    <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
             </li>
         </ul>
