--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,24 +1,38 @@
 <form #dataForm="ngForm" (ngSubmit)="save(dataForm.value)">
     <div class="form-group">
         <label for="title">Title</label>
-        <input ngModel name="title" type="text" class="form-control" id="title">
+        <input #title="ngModel" ngModel name="title" type="text" class="form-control" id="title" required>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+            Title is required.
+        </div>
     </div>
     <div class="form-group">
         <label for="price">Price</label>
         <div class="input-group"><span class="input-group-addon">KES</span>
-            <input ngModel name="price" type="number" class="form-control" id="price">
+            <input #price="ngModel" ngModel name="price" type="number" class="form-control" id="price" [min]="0" required>
+        </div>
+        <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+            <div *ngIf="price.errors.required">Price is required.</div>
+            <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
         </div>
     </div>
     <div class="form-group">
         <label for="category">Category</label>
-        <select ngModel name="category" class="form-control" id="category">
+        <select #category="ngModel" ngModel name="category" class="form-control" id="category" required>
       <option value=""></option>
       <option *ngFor="let c of categories$ | async" [value]="c.$key">{{c.name}}</option>
     </select>
+        <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+            Category is required.
+        </div>
     </div>
     <div class="form-group">
         <label for="imageUrl">Image URL</label>
-        <input ngModel name="imageUrl" type="text" class="form-control" id="imageUrl">
+        <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" class="form-control" id="imageUrl" url required>
+        <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+            <div *ngIf="imageUrl.errors.required">ImageUrl is required.</div>
+            <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
+        </div>
     </div>
     <button class="btn btn-primary">Save</button>
 </form>
