--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,38 +1,51 @@
-<form #dataForm="ngForm" (ngSubmit)="save(dataForm.value)">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input #title="ngModel" ngModel name="title" type="text" class="form-control" id="title" required>
-        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
-            Title is required.
+<div class="row">
+    <div class="col-md-6">
+        <form #dataForm="ngForm" (ngSubmit)="save(dataForm.value)">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input #title="ngModel" ngModel name="title" type="text" class="form-control" id="title" required>
+                <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+                    Title is required.
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="price">Price</label>
+                <div class="input-group"><span class="input-group-addon">KES</span>
+                    <input #price="ngModel" ngModel name="price" type="number" class="form-control" id="price" [min]="0" required>
+                </div>
+                <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+                    <div *ngIf="price.errors.required">Price is required.</div>
+                    <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="category">Category</label>
+                <select #category="ngModel" ngModel name="category" class="form-control" id="category" required>
+          <option value=""></option>
+          <option *ngFor="let c of categories$ | async" [value]="c.$key">{{c.name}}</option>
+        </select>
+                <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+                    Category is required.
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="imageUrl">Image URL</label>
+                <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" class="form-control" id="imageUrl" url required>
+                <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+                    <div *ngIf="imageUrl.errors.required">ImageUrl is required.</div>
+                    <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
+                </div>
+            </div>
+            <button class="btn btn-primary">Save</button>
+        </form>
+    </div>
+    <div class="col-md-6">
+        <div class="card" style="width: 18rem;">
+            <img [src]="imageUrl.value" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">{{title.value}}</h5>
+                <p class="card-text" *ngIf="price.value">KES {{price.value }}</p>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="price">Price</label>
-        <div class="input-group"><span class="input-group-addon">KES</span>
-            <input #price="ngModel" ngModel name="price" type="number" class="form-control" id="price" [min]="0" required>
-        </div>
-        <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
-            <div *ngIf="price.errors.required">Price is required.</div>
-            <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="category">Category</label>
-        <select #category="ngModel" ngModel name="category" class="form-control" id="category" required>
-      <option value=""></option>
-      <option *ngFor="let c of categories$ | async" [value]="c.$key">{{c.name}}</option>
-    </select>
-        <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
-            Category is required.
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="imageUrl">Image URL</label>
-        <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" class="form-control" id="imageUrl" url required>
-        <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
-            <div *ngIf="imageUrl.errors.required">ImageUrl is required.</div>
-            <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
-        </div>
-    </div>
-    <button class="btn btn-primary">Save</button>
-</form>
+</div>
