--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,1 +1,24 @@
-<a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+<p>
+    <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+</p>
+<p>
+    <input type="text" class="form-control" placeholder="Search...">
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let product of products$ | async">
+            <td>{{product.title}}</td>
+            <td>KES {{product.price}}</td>
+            <td>
+                <a [routerLink]="['/admin/products/', product.$key]">Edit</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
