--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,7 @@
         <form #dataForm="ngForm" (ngSubmit)="save(dataForm.value)">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input #title="ngModel" ngModel name="title" type="text" class="form-control" id="title" required>
+                <input #title="ngModel" [(ngModel)]="product.title" name="title" type="text" class="form-control" id="title" required>
                 <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
                     Title is required.
                 </div>
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <label for="price">Price</label>
                 <div class="input-group"><span class="input-group-addon">KES</span>
-                    <input #price="ngModel" ngModel name="price" type="number" class="form-control" id="price" [min]="0" required>
+                    <input #price="ngModel" [(ngModel)]="product.price" name="price" type="number" class="form-control" id="price" [min]="0" required>
                 </div>
                 <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
                     <div *ngIf="price.errors.required">Price is required.</div>
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label for="category">Category</label>
-                <select #category="ngModel" ngModel name="category" class="form-control" id="category" required>
+                <select #category="ngModel" [(ngModel)]="product.category" name="category" class="form-control" id="category" required>
           <option value=""></option>
           <option *ngFor="let c of categories$ | async" [value]="c.$key">{{c.name}}</option>
         </select>
@@ -30,21 +30,22 @@
             </div>
             <div class="form-group">
                 <label for="imageUrl">Image URL</label>
-                <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" class="form-control" id="imageUrl" url required>
+                <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" type="text" class="form-control" id="imageUrl" url required>
                 <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
                     <div *ngIf="imageUrl.errors.required">ImageUrl is required.</div>
                     <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
                 </div>
             </div>
             <button class="btn btn-primary">Save</button>
+            <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
         </form>
     </div>
     <div class="col-md-6">
         <div class="card" style="width: 18rem;">
-            <img [src]="imageUrl.value" class="card-img-top">
+            <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
             <div class="card-body">
-                <h5 class="card-title">{{title.value}}</h5>
-                <p class="card-text" *ngIf="price.value">KES {{price.value }}</p>
+                <h5 class="card-title">{{product.title}}</h5>
+                <p class="card-text" *ngIf="product.price">KES {{product.price }}</p>
             </div>
         </div>
     </div>
