--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
 </p>
 <p>
-    <input type="text" class="form-control" placeholder="Search...">
+    <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="Search...">
 </p>
 <table class="table">
     <thead>
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let product of products$ | async">
+        <tr *ngFor="let product of filteredProducts">
             <td>{{product.title}}</td>
             <td>KES {{product.price}}</td>
             <td>
