--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -41,11 +41,11 @@
         </form>
     </div>
     <div class="col-md-6">
-        <div class="card" style="width: 18rem;">
+        <div *ngIf="product.title" class="card" style="width: 18rem;">
             <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
             <div class="card-body">
                 <h5 class="card-title">{{product.title}}</h5>
-                <p class="card-text" *ngIf="product.price">KES {{product.price }}</p>
+                <p class="card-text" *ngIf="product.price">{{product.price | currency:'KES':true }}</p>
             </div>
         </div>
     </div>
