--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -41,12 +41,6 @@
         </form>
     </div>
     <div class="col-md-6">
-        <div *ngIf="product.title" class="card" style="width: 18rem;">
-            <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
-            <div class="card-body">
-                <h5 class="card-title">{{product.title}}</h5>
-                <p class="card-text" *ngIf="product.price">{{product.price | currency:'KES':true }}</p>
-            </div>
-        </div>
+        <app-product-card [product]="product" [showActions]="false"></app-product-card>
     </div>
 </div>
