--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,9 +4,9 @@
     </div>
     <div class="col">
         <div class="row">
-            <ng-container *ngFor="let product of filteredProducts let i = index">
+            <ng-container *ngFor="let p of filteredProducts let i = index">
                 <div class="col">
-                    <app-product-card [product]="product"></app-product-card>
+                    <app-product-card [product]="p" [shoppingCart]="cart"></app-product-card>
                 </div>
                 <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
             </ng-container>
