--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
                         <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
                         <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
                     </ng-container>
-                    <a class="dropdown-item" (click)="logout()">Logout</a>
+                    <a class="dropdown-item cursor" (click)="logout()">Logout</a>
                 </div>
             </li>
         </ul>
