--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,7 @@
 <h1>Shopping Cart</h1>
 <div class="row col-10" *ngIf="cart$ | async as cart">
-    <p>You have {{ cart.totalItemsCount }} items in your shopping cart.</p>
+    <p>You have {{ cart.totalItemsCount }} items in your shopping cart.
+        <button (click)="clearCart()" class="btn btn-light btn-sm">Clear Shopping Cart</button></p>
     <table class="table">
         <thead>
             <tr>
@@ -35,5 +36,5 @@
             </tr>
         </tfoot>
     </table>
-    <button (click)="clearCart()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+    <a class="btn btn-primary" routerLink="/check-out" *ngIf="cart.items.length">Check Out</a>
 </div>
